# http-serverC

./: CMakeLists.txt  ReadMe.md  example.c  main.c  test-built
Hashmap/src/: hash.c  hashmap.c  hashmap.h
Stringbuilder/: StringBuilder.c  StringBuilder.h  linkedLIst.c  linkedLIst.h
hashmap/: .gitattributes  CMakeLists.txt  README.md  hash.h  hashmap.c
hashmap/src/: CMakeLists.txt
hashmap/test/: CMakeLists.txt  test.c
http/: CMakeLists.txt
http/src/: CMakeLists.txt
http/src/server/: socket.c
parser/: parser.c  parser.h
server/: http_statuscode.c  http_statuscode.h  internalhandlers.c  router.c  router.h  server.c  server.h  socket.c  socket.h
test/: formatTest.c  overload.bat  overload.ps1  request.txt
threadpool/: thpool.c
